trunk/Archive2/fc/43dde901fa7993/output
main.cpp: In constructor 'derived::derived()':
main.cpp:6:10: error: 'void base::bar()' is private
     void bar() = delete;
          ^
main.cpp:12:9: error: within this context
         bar(8);
         ^
main.cpp:12:9: error: use of deleted function 'void base::bar()'
main.cpp:6:10: note: declared here
     void bar() = delete;
          ^
