trunk/Archive2/fc/43dde901fa7993/main.cpp


void bar(int x) {}

class base {
    void bar() = delete;
};

class derived : public base {
    derived()
    {
        bar(8);
    }
};

int main() {    
}